# file-parser

./: .gitignore  MakeFile  Makefile  README.md  ex.ipynb  pyproject.toml  requirements.txt
example/: file_parser  guida.ipynb  guide.ipynb  sample.ini  sample.json  sample.txt  sample.xlsx  sample.xml  test.ipynb
file_parser/: __init__.py  file_parser.py
file_parser/abstract/: __init__.py  parser_interface.py
file_parser/commons/: utils.py
file_parser/csv/: csv_parser.py
file_parser/exceptions/: __init__.py  exceptions.py
file_parser/ini/: __init__.py  ini_parser.py
file_parser/json/: json_parser.py
file_parser/raw/: __init__.py  raw_parser.py
file_parser/xlsx/: __init__.py  xlsx_parser.py
file_parser/xml/: __init__.py  xml_parser.py
tests/: conftest.py  context.py  test_bid_file_parser.py
tests/csv/: test_csv.py
tests/ini/: test_ini.py
tests/json/: test_json.py
tests/xlsx/: test_xlsx.py
tests/xml/: test_xml.py
