[tool.poetry]
name = "file_parser"
version = "1.0.0"
description = ""
authors = ["EnricoBid <enrico.ruggiano@bidcompany.it>"]
license = "MIT"
readme = "README.md"
packages= [{include = 'file_parser'}]

[tool.poetry.dependencies]
python = "^3.6"
attrs="*"
exceptiongroup="*"
iniconfig= "*"
pluggy="*"
tomli="*"
XlsxWriter="*"
openpyxl="*"

[tool.poetry.dev-dependencies]
coverage="*"
coverage-badge="*"
mypy="*"
mypy-extensions="*"
pytest="7.2.1"
pytest-cov="4.0.0"
typing_extensions="*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
