[tool.poetry]
name = "file_parser"
version = "1.0.0"
description = ""
authors = ["EnricoRuggiano <enricoruggiano1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages= [{include = 'file_parser'}]

[tool.poetry.dependencies]
python = "3.8"
attrs="22.2.0"
coverage="7.1.0"
coverage-badge="1.1.0"
exceptiongroup="1.1.0"
iniconfig="2.0.0"
mypy="1.0.0"
mypy-extensions="1.0.0"
packaging="23.0"
pluggy="1.0.0"
pytest="7.2.1"
pytest-cov="4.0.0"
tomli="2.0.1"
typing_extensions="4.5.0"
XlsxWriter="3.1.2" 
openpyxl="3.1.2"
defusedxml="0.7.1"
lxml="4.9.3"

[tool.poetry.dev-dependencies]
coverage="*"
coverage-badge="*"
mypy="*"
mypy-extensions="*"
pytest="7.2.1"
pytest-cov="4.0.0"
typing_extensions="*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
