[tool.poetry]
name = "file_parser"
version = "1.0.0"
description = ""
authors = ["EnricoRuggiano <enricoruggiano1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages= [{include = 'file_parser'}]

[tool.poetry.dependencies]
python = "^3.8"
attrs="*"
coverage="*"
coverage-badge="*"
exceptiongroup="*"
iniconfig="*"
mypy="*"
mypy-extensions="*"
packaging="*"
pluggy="*"
pytest="*"
pytest-cov="*"
tomli="*"
typing_extensions="*"
XlsxWriter="*" 
openpyxl="*"
defusedxml="*"
lxml="*"

[tool.poetry.dev-dependencies]
coverage="*"
coverage-badge="*"
mypy="*"
mypy-extensions="*"
pytest="7.2.1"
pytest-cov="4.0.0"
typing_extensions="*"
pytest-html="*"
pytest-ordering="*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]